microservices/deploy/service-mesh/istio/traffic-management/virtual-service-details.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details-route
spec:
  hosts:
  - details-service.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: details-service
        subset: v2
      weight: 50
    - destination:
        host: details-service
        subset: v3
      weight: 50
