microservices/deploy/service-mesh/istio/traffic-management/virtual-service-fault-abort.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fault-injection-abort
spec:
  hosts:
  - reviews-service.default.svc.cluster.local
  http:
  - fault:
      abort:
        httpStatus: 500
        percentage:
          value: 100
    route:
    - destination:
        host: reviews-service.default.svc.cluster.local
        subset: v1
