microservices/deploy/service-mesh/istio/traffic-management/virtual-service-payment.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name:  virtualservice-payment
spec:
  hosts:
  - payment-service #short name: interpreted as payment-service.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: payment-service #short name: interpreted as payment-service.default.svc.cluster.local
        subset: v1
      weight: 80
    - destination:
        host: payment-service #short name: interpreted as payment-service.default.svc.cluster.local
        subset: v3
      weight: 20
