microservices/deploy/service-mesh/istio/traffic-management/virtual-service-retries.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-retries
spec:
  hosts:
  - frontend-service.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: frontend-service.default.svc.cluster.local
        subset: v1
    retries:
      attempts: 2
      perTryTimeout: 2s
      retryOn: connect-failure,refused-stream,503
